fixed mobile, no extra space

--- a/main.css
+++ b/main.css
@@ -220,8 +220,8 @@ p {
     }
     #history {
         grid-area: h;
-        width: 70%; /* Adjust the width for mobile */
-        max-width: 70%; /* Optional: Set a max-width */
+        width: 80%; /* Adjust the width for mobile */
+        max-width: 80%; /* Optional: Set a max-width */
     }
     #history p {
         line-height: 1.4;  
